Fix port settings width is too small on iPad Safari

--- a/static/common.css
+++ b/static/common.css
@@ -59,6 +59,10 @@ body {
     min-width: 50%;
 }
 
+.settings #s-port .mdc-text-field {
+    min-width: 100px;
+}
+
 .settings div.text.helper {
     display: flex;
 }
